Add endpoit to create new exams
