# src/controllers/examController/examController.ts
@@ -1,4 +1,4 @@
-import { Body, Get, Path, Put, Route, Security, Tags } from "tsoa";
+import { Body, Get, Path, Post, Put, Route, Security, Tags } from "tsoa";
 import { Controller } from "@tsoa/runtime";
 import ExamRepository from "../../repositories/examRepository/examRepository";
 import ExamResponseI from "../../interfaces/examResponse";
@@ -27,11 +27,23 @@ export class ExamController extends Controller {
     @Security("api_key", ["admin"])
     public async putExam(
         @Path("uuid") examUuid: string,
-        @Body() updatedExam: ExamRequest
+        @Body() examRequest: ExamRequest
     ): Promise<ExamResponseI> {
         return (await this._repository.updateExam(
             examUuid,
-            updatedExam
+            examRequest
+        )) as ExamResponseI;
+    }
+
+    @Post("{uuid}")
+    @Security("api_key", ["admin"])
+    public async postExam(
+        @Path("uuid") examUuid: string,
+        @Body() examRequest: ExamRequest
+    ): Promise<ExamResponseI> {
+        return (await this._repository.createExam(
+            examUuid,
+            examRequest
         )) as ExamResponseI;
     }
 }
