# src/swagger.json
@@ -268,6 +268,47 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "operationId": "PostExam",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ExamResponseI"
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": ["Exam"],
+                "security": [
+                    {
+                        "api_key": ["admin"]
+                    }
+                ],
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "uuid",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/ExamRequest"
+                            }
+                        }
+                    }
+                }
             }
         },
         "/images-snapshot": {
